@@ -1,3 +1,7 @@
+2010-05-11 Homer Xing <homer.xing@gmail.com>
+
+    * Improve show_text_window()
+
 2010-05-06 QI Chengjie <starboy.qi@gmail.com>
 
     * Sorting icons by name in "System Setting" pane
